--- a/2024.md
+++ b/2024.md
@@ -155,6 +155,10 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I authored an article titled [รีวิวคลาส Collection of Software Development & Digital Transformation Lectures](https://medium.com/@mrgleam/รีวิวคลาส-collection-of-software-development-digital-transformation-lectures-09939c991eb5)
 
+* I authored an article titled [วิธีรับมือคนคุยยาก: เปลี่ยนความหงุดหงิดให้เป็นโอกาสเรียนรู้](https://medium.com/odds-team/วิธีรับมือคนคุยยาก-เปลี่ยนความหงุดหงิดให้เป็นโอกาสเรียนรู้-b58443731168)
+
+* I authored an article titled [เมื่อเราไม่รู้เรื่องนั้น เราจะตอบกลับอย่างไรดี?](https://medium.com/odds-team/เมื่อเราไม่รู้เรื่องนั้น-เราจะตอบกลับอย่างไรดี-cb390e6919a4)
+
 ## General prompts
 
 * We are not hiring.
