docs: add new volunteered to staff

--- a/2024.md
+++ b/2024.md
@@ -159,6 +159,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I authored an article titled [เมื่อเราไม่รู้เรื่องนั้น เราจะตอบกลับอย่างไรดี?](https://medium.com/odds-team/เมื่อเราไม่รู้เรื่องนั้น-เราจะตอบกลับอย่างไรดี-cb390e6919a4)
 
+* I volunteered as a staff member for the Refactoring Day event.
+
 ## General prompts
 
 * We are not hiring.
