docs: add new contribute

--- a/2024.md
+++ b/2024.md
@@ -69,6 +69,14 @@ End-to-end testing is implemented using Playwright to ensure the board’s funct
 
 Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crappy-board).
 
+### [Gilded Rose Refactoring Kata](https://github.com/emilybache/GildedRose-Refactoring-Kata)
+
+**Contributions:** [Fixed compatibility with the latest version of Glint.](https://github.com/emilybache/GildedRose-Refactoring-Kata/pull/577)
+  
+**Scope:** Package
+  
+**Impact:** Maintained compatibility with the new version of Glint.
+
 ## Collaboration & mentorship
 * Mentoring interns / helping new team members get started
 
