add new boo to read

--- a/2024.md
+++ b/2024.md
@@ -169,6 +169,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I volunteered as a staff member for the Refactoring Day event.
 
+* [x] _เถียงอย่างไรให้ชนะแมว [Jay Heinrichs, วิกันดา พินทุวชิราภรณ์ (Translator)]_
+
 ## General prompts
 
 * We are not hiring.
