docs: add new authored an article

--- a/2024.md
+++ b/2024.md
@@ -171,6 +171,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] _เถียงอย่างไรให้ชนะแมว [Jay Heinrichs, วิกันดา พินทุวชิราภรณ์ (Translator)]_
 
+* I authored an article titled [การทำซ้ำเพื่อลดการทำซ้ำ](https://medium.com/odds-team/การทำซ้ำเพื่อลดการทำซ้ำ-59a297e8c023)
+
 ## General prompts
 
 * We are not hiring.
