docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -141,7 +141,7 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] Read _คู่มือฝึกฝนให้เป็นคนใจดี [Henry James Garrett, เพียงขวัญ ลักษณ์แสงวิไล (Translator)]_
 
-* [x] _พูดแบบนี้ไง ใครๆก็อยากฟัง [Takafumi Kakiuchi, 柿内尚文, ดนพ ลีนุกูล (Translator)]_
+* [x] Read _พูดแบบนี้ไง ใครๆก็อยากฟัง [Takafumi Kakiuchi, 柿内尚文, ดนพ ลีนุกูล (Translator)]_
 
 * I authored an article titled [ลองใช้งาน pulumi และ scala 3 เพื่อสร้าง server บน hetzner cloud](https://medium.com/odds-team/ลองใช้งาน-pulumi-และ-scala-3-เพื่อสร้าง-server-บน-hetzner-cloud-a442b02b6436)
 
@@ -169,9 +169,11 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I volunteered as a staff member for the Refactoring Day event.
 
-* [x] _เถียงอย่างไรให้ชนะแมว [Jay Heinrichs, วิกันดา พินทุวชิราภรณ์ (Translator)]_
+* [x] Read _เถียงอย่างไรให้ชนะแมว [Jay Heinrichs, วิกันดา พินทุวชิราภรณ์ (Translator)]_
 
 * I authored an article titled [การทำซ้ำเพื่อลดการทำซ้ำ](https://medium.com/odds-team/การทำซ้ำเพื่อลดการทำซ้ำ-59a297e8c023)
+
+* [x] Read _คิดแบบ LEAN : วิธีสร้างผลิตภัณฑ์ที่ไม่มีวันล้มเหลว [Dan Olsen, วิญญู กิ่งหิรัญวัฒนา (Translator)]_
 
 ## General prompts
 
