--- a/2024.md
+++ b/2024.md
@@ -10,7 +10,7 @@ July 2024
 
 Sep 2024
 
-* [ ] Read _Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google._
+* [ ] Read _Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google._  (continue Chapter 7 in 2025)
 
 Oct 2024
 
