docs: add collaboration & mentorship

--- a/2025.md
+++ b/2025.md
@@ -20,6 +20,8 @@ January 2025
 
 ## Collaboration & mentorship
 
+* Mentoring interns / helping new team members get started
+
 ## Design & documentation
 
 ## Company building
