docs: add new article to publish

--- a/2025.md
+++ b/2025.md
@@ -34,6 +34,8 @@ January 2025
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
+* [x] I authored an article titled [เปรียบเทียบการออกแบบระบบตะกร้าสินค้า: ระหว่างการสั่งงานและพฤติกรรมจริง](https://medium.com/odds-team/เปรียบเทียบการออกแบบระบบตะกร้าสินค้า-ระหว่างการสั่งงานและพฤติกรรมจริง-fd7f46d97725)
+
 ## General prompts
 
 * We are not hiring.
