--- a/2025.md
+++ b/2025.md
@@ -12,6 +12,12 @@ January 2025
 
 * [ ] I am preparing comprehensive materials for instructing students in the Rust programming language.
 
+* [ ] I will open Rust programming course and start teaching students.
+
+February 2025
+
+* [ ] I will open Rust programming course and start teaching students.
+
 ## Goals for next year
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
