docs: add new book to read

--- a/2025.md
+++ b/2025.md
@@ -42,6 +42,10 @@ January 2025
 
 * [x] I authored an article titled [เปรียบเทียบการออกแบบระบบตะกร้าสินค้า: ระหว่างการสั่งงานและพฤติกรรมจริง](https://medium.com/odds-team/เปรียบเทียบการออกแบบระบบตะกร้าสินค้า-ระหว่างการสั่งงานและพฤติกรรมจริง-fd7f46d97725)
 
+* [x] Read _Super Boss อยากทำงานกับหัวหน้าแบบนี้จัง [Hiroko Mizushima, 水島 広子, อาคิรา รัตนาภิรัต (Translator)]_
+
+* [x] Read _100 นิสัยไม่เป็นคนหัวร้อน [戸田 久実, โทดะ คุมิ, ヒダカナオト (Illustrator), ณัฐกฤตา เพ็ญกุล (Translator)]_
+
 ## General prompts
 
 * We are not hiring.
