docs: update completed task in Jan

--- a/2025.md
+++ b/2025.md
@@ -10,9 +10,9 @@ January 2025
 
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
-* [ ] I am preparing comprehensive materials for instructing students in the Rust programming language.
+* [x] I am preparing comprehensive materials for instructing students in the Rust programming language.
 
-* [ ] I will open Rust programming course and start teaching students.
+* [x] I will open Rust programming course and start teaching students.
 
 February 2025
 
