docs: add new book to January reading list

--- a/2025.md
+++ b/2025.md
@@ -46,6 +46,8 @@ January 2025
 
 * [x] Read _100 นิสัยไม่เป็นคนหัวร้อน [戸田 久実, โทดะ คุมิ, ヒダカナオト (Illustrator), ณัฐกฤตา เพ็ญกุล (Translator)]_
 
+* [x] Read _พลังสมองของคนทำเรื่องยากได้ ทำเรื่องง่ายเร็ว [Yū Suzuki, ยู ซึซึกิ, กมลวรรณ เพ็ญอร่าม (Translator)]_
+
 ## General prompts
 
 * We are not hiring.
