docs: mark running goal as completed in January

--- a/2025.md
+++ b/2025.md
@@ -38,7 +38,7 @@ February 2025
 
 January 2025
 
-* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+* [x] Start with 3–5 km runs, gradually increasing distance each week.
 
 * [x] I authored an article titled [เปรียบเทียบการออกแบบระบบตะกร้าสินค้า: ระหว่างการสั่งงานและพฤติกรรมจริง](https://medium.com/odds-team/เปรียบเทียบการออกแบบระบบตะกร้าสินค้า-ระหว่างการสั่งงานและพฤติกรรมจริง-fd7f46d97725)
 
