docs: mark book translation task as completed in January

--- a/2025.md
+++ b/2025.md
@@ -6,7 +6,7 @@
 
 January 2025
 
-* [ ] I am currently engaged in translating Chapter 1 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+* [x] I am currently engaged in translating Chapter 1 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
