docs: finished open Rust programming course in Febuary

--- a/2025.md
+++ b/2025.md
@@ -16,7 +16,7 @@ January 2025
 
 February 2025
 
-* [ ] I will open Rust programming course and start teaching students.
+* [x] I will open Rust programming course and start teaching students.
 
 ## Goals for next year
 
