docs: add translating chapter 2 in February

--- a/2025.md
+++ b/2025.md
@@ -18,6 +18,8 @@ February 2025
 
 * [x] I will open Rust programming course and start teaching students.
 
+* [ ] I am currently engaged in translating Chapter 2 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
 ## Goals for next year
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
