docs: add new book to read

--- a/2025.md
+++ b/2025.md
@@ -50,6 +50,8 @@ January 2025
 
 * [x] Read _พลังสมองของคนทำเรื่องยากได้ ทำเรื่องง่ายเร็ว [Yū Suzuki, ยู ซึซึกิ, กมลวรรณ เพ็ญอร่าม (Translator)]_
 
+* [x] Read _คดีฆาตกรรมในบ้านสิบเหลี่ยม [Yukito Ayatsuji, ฉวีวงศ์ อัศวเสนา (Translator)]_
+
 ## General prompts
 
 * We are not hiring.
