docs: add outside of work in February

--- a/2025.md
+++ b/2025.md
@@ -52,6 +52,10 @@ January 2025
 
 * [x] Read _คดีฆาตกรรมในบ้านสิบเหลี่ยม [Yukito Ayatsuji, ฉวีวงศ์ อัศวเสนา (Translator)]_
 
+February 2025
+
+* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+
 ## General prompts
 
 * We are not hiring.
