--- a/2025.md
+++ b/2025.md
@@ -18,7 +18,21 @@ February 2025
 
 * [x] I will open Rust programming course and start teaching students.
 
-* [ ] I am currently engaged in translating Chapter 2 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+* [x] I am currently engaged in translating Chapter 2 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+* [ ] I am currently engaged in translating Chapter 3 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
+
+March 2025
+
+* [ ] I am currently engaged in translating Chapter 4 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+April 2025
+
+* [ ] I am currently engaged in translating Chapter 5 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+* [ ] I will open Thinking Recursively Part I course and start teaching students.
 
 ## Goals for next year
 
