docs: update feb 2025

--- a/2025.md
+++ b/2025.md
@@ -20,11 +20,15 @@ February 2025
 
 * [x] I am currently engaged in translating Chapter 2 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
-* [ ] I am currently engaged in translating Chapter 3 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+* [x] I am currently engaged in translating Chapter 3 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
-* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
+* [x] I will open Rust programming online course and start teaching students.
 
 March 2025
+
+* [ ] I will open Rust programming online course and start teaching students.
+
+* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
 
 * [ ] I am currently engaged in translating Chapter 4 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
@@ -67,6 +71,12 @@ January 2025
 * [x] Read _คดีฆาตกรรมในบ้านสิบเหลี่ยม [Yukito Ayatsuji, ฉวีวงศ์ อัศวเสนา (Translator)]_
 
 February 2025
+
+* [x] Read _เลิกเป็นมนุษย์ตื่นสาย กลายเป็นมนุษย์ตื่นเช้า [Ryo Tsukamoto, สึคาโมโตะ เรียว, ภัทรวรรณ ศรประพันธ์ (Translator)]_
+
+* [x] Read _นักปราชญ์สโตอิกรู้วิธี “ช่างแม่ง” มาตั้ง 2,500 ปีแล้ว [Ryan Holiday, Stephen Hanselman, พลอยแสง เอกญาติ (Translator)]_
+
+March 2025
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
