docs: update new book to read

--- a/2025.md
+++ b/2025.md
@@ -76,6 +76,8 @@ February 2025
 
 * [x] Read _นักปราชญ์สโตอิกรู้วิธี “ช่างแม่ง” มาตั้ง 2,500 ปีแล้ว [Ryan Holiday, Stephen Hanselman, พลอยแสง เอกญาติ (Translator)]_
 
+* [x] Read _วิธีค้นหา “สิ่งที่คุณอยากทำ” ที่ง่ายที่สุดในโลก [Yoshitaka Yoshimura, โยชิตากา โยชิมุราะ, ธนภัส สนธิรักษ์ (Translator)]_
+
 March 2025
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
