--- a/2025.md
+++ b/2025.md
@@ -26,11 +26,13 @@ February 2025
 
 March 2025
 
-* [ ] I will open Rust programming online course and start teaching students.
+* [x] I will open Rust programming online course and start teaching students.
+
+* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
 
 * [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
 
-* [ ] I am currently engaged in translating Chapter 4 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+* [x] I am currently engaged in translating Chapter 4 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 April 2025
 
@@ -81,6 +83,8 @@ February 2025
 March 2025
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
+
+* [x] Read _ปราชญ์แห่งธนู [Paulo Coelho, พอลโอ โคเอโล, พลอยแสง เอกญาติ (Translator)]_
 
 ## General prompts
 
