docs: add new event in March

--- a/2025.md
+++ b/2025.md
@@ -28,6 +28,8 @@ March 2025
 
 * [x] I will open Rust programming online course and start teaching students.
 
+* [x] I am going to introduce a Lambda Calculus crash course and start instructing students.
+
 * [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
 
 * [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
