docs: add new book to read

--- a/2025.md
+++ b/2025.md
@@ -84,9 +84,9 @@ February 2025
 
 March 2025
 
-* [ ] Start with 3–5 km runs, gradually increasing distance each week.
-
 * [x] Read _ปราชญ์แห่งธนู [Paulo Coelho, พอลโอ โคเอโล, พลอยแสง เอกญาติ (Translator)]_
+
+* [x] Read _ขุมทรัพย์สุดปลายฝัน [Paulo Coelho, กอบชลี (Translator), กันเกรา (Translator)]_
 
 ## General prompts
 
