docs: update task in April 2025

--- a/2025.md
+++ b/2025.md
@@ -28,8 +28,6 @@ March 2025
 
 * [x] I am going to introduce a Lambda Calculus crash course and start instructing students.
 
-* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
-
 * [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
 
 * [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
@@ -38,7 +36,13 @@ March 2025
 
 April 2025
 
+* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
+
 * [ ] I am currently engaged in translating Chapter 5 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+
+* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
 
 * [ ] I will open Thinking Recursively Part I course and start teaching students.
 
