docs: add outside of work in April

--- a/2025.md
+++ b/2025.md
@@ -92,6 +92,10 @@ March 2025
 
 * [x] Read _ขุมทรัพย์สุดปลายฝัน [Paulo Coelho, กอบชลี (Translator), กันเกรา (Translator)]_
 
+April 2025
+
+* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+
 ## General prompts
 
 * We are not hiring.
