docs: update april and may

--- a/2025.md
+++ b/2025.md
@@ -28,21 +28,25 @@ March 2025
 
 * [x] I am going to introduce a Lambda Calculus crash course and start instructing students.
 
-* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
-
-* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
-
 * [x] I am currently engaged in translating Chapter 4 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 April 2025
 
+* [x] I am currently engaged in translating Chapter 5 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+May 2025
+
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
-* [ ] I am currently engaged in translating Chapter 5 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
-
-* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+* [ ] I am currently engaged in translating Chapter 6 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 * [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
+
+June 2025
+
+* [ ] I am currently engaged in translating Chapter 7 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+
+* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
 
 * [ ] I will open Thinking Recursively Part I course and start teaching students.
 
@@ -51,6 +55,10 @@ April 2025
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
 
 ## Projects
+
+### Modern Java
+
+* Recently, I’ve dedicated time to refining my skills in refactoring Java code, focusing on enhancing its structure and efficiency.
 
 ## Collaboration & mentorship
 
@@ -93,6 +101,10 @@ March 2025
 * [x] Read _ขุมทรัพย์สุดปลายฝัน [Paulo Coelho, กอบชลี (Translator), กันเกรา (Translator)]_
 
 April 2025
+
+* [x] Start with 3–5 km runs, gradually increasing distance each week.
+
+May 2025
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
