docs: update read book in May

--- a/2025.md
+++ b/2025.md
@@ -38,7 +38,7 @@ May 2025
 
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
-* [ ] I am currently engaged in translating Chapter 6 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
+* [x] I am currently engaged in translating Chapter 6 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 * [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
 
@@ -103,6 +103,10 @@ March 2025
 April 2025
 
 * [x] Start with 3–5 km runs, gradually increasing distance each week.
+
+* [x] Read _อุปสรรคคือทางออก [Ryan Holiday, ฐานันดร วงศ์กิตติธร (Translator)]_
+
+* [x] Read _สโตอิก ปรัชญาเสริมแกร่งเพื่อชีวิตไม่สั่นคลอน [Jonas Salzgeber, Nils Salzgeber (Editor), วิไลรัตน์ เอมเอี่ยม (Translator)]_
 
 May 2025
 
