docs: update timeline to do it

--- a/2025.md
+++ b/2025.md
@@ -36,13 +36,13 @@ April 2025
 
 May 2025
 
-* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
-
 * [x] I am currently engaged in translating Chapter 6 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
-* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
-
 June 2025
+
+* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
+
+* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
 
 * [ ] I am currently engaged in translating Chapter 7 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
@@ -110,7 +110,7 @@ April 2025
 
 May 2025
 
-* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+* [x] Start with 3–5 km runs, gradually increasing distance each week.
 
 ## General prompts
 
