docs: update future tasks

--- a/2025.md
+++ b/2025.md
@@ -50,6 +50,22 @@ June 2025
 
 * [ ] I will open Thinking Recursively Part I course and start teaching students.
 
+July 2025
+
+* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+
+August 2025
+
+* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+
+September 2025
+
+* [ ] ...
+
+October 2025
+
+* [ ] I will open Functional X Part I course and start teaching students.
+
 ## Goals for next year
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
@@ -111,6 +127,32 @@ April 2025
 May 2025
 
 * [x] Start with 3–5 km runs, gradually increasing distance each week.
+
+* [x] Read _How to Do Things You Hate - เทคนิคจัดการงานที่ไม่ชอบ ฉบับคนไร้วินัยที่อยากแก้นิสัยและพัฒนาให้สุด! [Peter Hollins]_
+
+* [x] Read _ความได้เปรียบทางอารมณ์ [Randy Taran]_
+
+* [x] Read _Philosophy เฟลศาสตร์ เปลี่ยนความผิดพลาดเป็นชัยชนะ [เอลิซาเบท เดย์, นัทธนม เปรมสำราญ (Translator)]_
+
+June 2025
+
+* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+
+July 2025
+
+* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+
+August 2025
+
+* [ ] Start with 5–10 km runs, gradually increasing distance each week.
+
+September 2025
+
+* [ ] Start with 5–10 km runs, gradually increasing distance each week.
+
+October 2025
+
+* [ ] Start with 5–10 km runs, gradually increasing distance each week.
 
 ## General prompts
 
