docs: add new book to read

--- a/2025.md
+++ b/2025.md
@@ -132,7 +132,11 @@ May 2025
 
 * [x] Read _Philosophy เฟลศาสตร์ เปลี่ยนความผิดพลาดเป็นชัยชนะ [เอลิซาเบท เดย์, นัทธนม เปรมสำราญ (Translator)]_
 
+* [x] Read _เทคนิคปล่อยผ่าน ไม่รับเรื่องน่ารำคาญเข้ามาในชีวิต [Nobuyori Ohshima, 大嶋 信頼, โนบุโยริ โอชิมะ, ธนภัส สนธิรักษ์ (Translator)]_
+
 June 2025
+
+* [x] Read _คิดเป็นภาพ เปลี่ยนเรื่องยากให้ง่ายใน 1 นาที [ซากุราดะ จุน (Sakarada Jun), ทินภาส พาหะนิชย์ (translator)]_
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
