--- a/2025.md
+++ b/2025.md
@@ -42,17 +42,17 @@ June 2025
 
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
-* [ ] I am preparing comprehensive materials for instructing students in the Thinking Recursively Part I course.
+* [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
 
 * [ ] I am currently engaged in translating Chapter 7 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 * [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
 
-* [ ] I will open Thinking Recursively Part I course and start teaching students.
-
 July 2025
 
 * [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+
+* [ ] I will open SF & Thinking Recursively course and start teaching students.
 
 August 2025
 
