docs: update translate book

--- a/2025.md
+++ b/2025.md
@@ -44,19 +44,17 @@ June 2025
 
 * [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
 
-* [ ] I am currently engaged in translating Chapter 7 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
-
-* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+* [x] I am currently engaged in translating Chapter 7 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
 July 2025
 
-* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
-
-* [ ] I will open SF & Thinking Recursively course and start teaching students.
+* [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
 
 August 2025
 
 * [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
+
+* [ ] I will open SF & Thinking Recursively course and start teaching students.
 
 September 2025
 
@@ -137,6 +135,8 @@ May 2025
 June 2025
 
 * [x] Read _คิดเป็นภาพ เปลี่ยนเรื่องยากให้ง่ายใน 1 นาที [ซากุราดะ จุน (Sakarada Jun), ทินภาส พาหะนิชย์ (translator)]_
+
+* [x] Read _Leading Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google [Addy Osmani]_
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
