docs(2025): add new books to read list

--- a/2025.md
+++ b/2025.md
@@ -138,6 +138,10 @@ June 2025
 
 * [x] Read _Leading Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google [Addy Osmani]_
 
+* [x] Read _วิธีพูดให้คนรู้สึกดีอย่างคนที่รู้หลักจิตวิทยา [原邦雄 (ฮาระ คุนิโอะ), โยซุเกะ (Translator)]_
+
+* [x] Read _ประโยชน์ของความรู้ที่ไร้ประโยชน์ [Abraham Flexner, กิตติธัช สุมาลย์นพ (Translator)]_
+
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
 July 2025
