docs(2025): add new book to reading list

--- a/2025.md
+++ b/2025.md
@@ -142,6 +142,8 @@ June 2025
 
 * [x] Read _ประโยชน์ของความรู้ที่ไร้ประโยชน์ [Abraham Flexner, กิตติธัช สุมาลย์นพ (Translator)]_
 
+* [x] Read _บนโลกใบนี้ไม่มีงานง่าย [Kikuko Tsumura, พรพิทักษ์ นิ่มอนงค์ (Translator)]_
+
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
 
 July 2025
