docs: add new book to read

--- a/2025.md
+++ b/2025.md
@@ -144,7 +144,9 @@ June 2025
 
 * [x] Read _บนโลกใบนี้ไม่มีงานง่าย [Kikuko Tsumura, พรพิทักษ์ นิ่มอนงค์ (Translator)]_
 
-* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+* [x] Start with 3–5 km runs, gradually increasing distance each week.
+
+* [x] Read _ฉันตกลงสงบศึกกับจิตใจ [中村 恒子 (Tsuneko Nakamura), 大久保 弘美 (Hiromi Okuda), จิตรลดา มีเสมา (Translator)]_
 
 July 2025
 
