docs(2025): update reading list and task progress

--- a/2025.md
+++ b/2025.md
@@ -40,13 +40,13 @@ May 2025
 
 June 2025
 
-* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
-
-* [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
-
 * [x] I am currently engaged in translating Chapter 7 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
 
+* [x] I successfully completed an intensive study of Kong Gateway through hands-on implementation and practical application. [Using Kong Gateway the Hard Way!]
+
 July 2025
+
+* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
 * [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
 
@@ -72,7 +72,7 @@ October 2025
 
 ### Modern Java
 
-* Recently, I’ve dedicated time to refining my skills in refactoring Java code, focusing on enhancing its structure and efficiency.
+* Recently, I've dedicated time to refining my skills in refactoring Java code, focusing on enhancing its structure and efficiency.
 
 ## Collaboration & mentorship
 
@@ -104,9 +104,9 @@ February 2025
 
 * [x] Read _เลิกเป็นมนุษย์ตื่นสาย กลายเป็นมนุษย์ตื่นเช้า [Ryo Tsukamoto, สึคาโมโตะ เรียว, ภัทรวรรณ ศรประพันธ์ (Translator)]_
 
-* [x] Read _นักปราชญ์สโตอิกรู้วิธี “ช่างแม่ง” มาตั้ง 2,500 ปีแล้ว [Ryan Holiday, Stephen Hanselman, พลอยแสง เอกญาติ (Translator)]_
+* [x] Read _นักปราชญ์สโตอิกรู้วิธี "ช่างแม่ง" มาตั้ง 2,500 ปีแล้ว [Ryan Holiday, Stephen Hanselman, พลอยแสง เอกญาติ (Translator)]_
 
-* [x] Read _วิธีค้นหา “สิ่งที่คุณอยากทำ” ที่ง่ายที่สุดในโลก [Yoshitaka Yoshimura, โยชิตากา โยชิมุราะ, ธนภัส สนธิรักษ์ (Translator)]_
+* [x] Read _วิธีค้นหา "สิ่งที่คุณอยากทำ" ที่ง่ายที่สุดในโลก [Yoshitaka Yoshimura, โยชิตากา โยชิมุราะ, ธนภัส สนธิรักษ์ (Translator)]_
 
 March 2025
 
