add new book to read

--- a/2025.md
+++ b/2025.md
@@ -148,6 +148,8 @@ June 2025
 
 * [x] Read _ฉันตกลงสงบศึกกับจิตใจ [中村 恒子 (Tsuneko Nakamura), 大久保 弘美 (Hiromi Okuda), จิตรลดา มีเสมา (Translator)]_
 
+* [x] Read ถึงโมโหก็อย่าสู้กับคนโง่ [Kotaro Tamura, ทามุระ โคทาโร่, ชัญพัส วรศักดิ์ (Translator)]
+
 July 2025
 
 * [ ] Start with 3–5 km runs, gradually increasing distance each week.
