update book to read

--- a/2025.md
+++ b/2025.md
@@ -2,8 +2,6 @@
 
 ## Goals for this year
 
-[comment]: # (* List the major goals here!)
-
 January 2025
 
 * [x] I am currently engaged in translating Chapter 1 of 'Leading Effective Engineering Teams', a comprehensive guide to engineering management."
@@ -65,8 +63,6 @@ October 2025
 * [ ] I will open Functional X Part I course and start teaching students.
 
 ## Goals for next year
-
-[comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
 
 ## Projects
 
@@ -152,7 +148,11 @@ June 2025
 
 July 2025
 
-* [ ] Start with 3–5 km runs, gradually increasing distance each week.
+* [x] Start with 3–5 km runs, gradually increasing distance each week.
+
+* [x] Read ฝึกสมองให้สมองไม่เหนื่อย [อิชิกาวะ โยชิกิ]
+
+* [x] Read สิ่งที่ต้องไม่ทำของคนที่ลงมือทำ NOT-TO-DO LIST [塚本亮 (สึคาโมโตะ เรียว), ปาวัน การสมใจ (Translator)]
 
 August 2025
 
