--- a/2025.md
+++ b/2025.md
@@ -44,17 +44,19 @@ June 2025
 
 July 2025
 
+* [x] I successfully completed an intensive study of Satir LV 1
+
+August 2025
+
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
 * [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
 
-August 2025
-
-* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
-
 * [ ] I will open SF & Thinking Recursively course and start teaching students.
 
 September 2025
+
+* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
 
 * [ ] ...
 
