docs(2025): mark running tasks as complete and add new books to reading list

--- a/2025.md
+++ b/2025.md
@@ -158,7 +158,11 @@ July 2025
 
 August 2025
 
-* [ ] Start with 5–10 km runs, gradually increasing distance each week.
+* [x] Start with 5–10 km runs, gradually increasing distance each week.
+
+* [x] Read ฉิบหาย: ประวัติศาสตร์มนุษยชาติฉบับวินาศสันตะโร [Tom Phillips, คุณากร วาณิชย์วิรุฬห์ (Translator)]
+
+* [x] Read ไม่ได้มีชีวิตอยู่เพื่อหล่อน จะแคร์เพื่อ? [Kamataku, カマたく, คามาทาคุ, Route21 (Translator)]
 
 September 2025
 
