docs(2025): update reading list with new titles and mark additional running tasks as complete

--- a/2025.md
+++ b/2025.md
@@ -152,25 +152,35 @@ July 2025
 
 * [x] Start with 3–5 km runs, gradually increasing distance each week.
 
-* [x] Read ฝึกสมองให้สมองไม่เหนื่อย [อิชิกาวะ โยชิกิ]
+* [x] Read _ฝึกสมองให้สมองไม่เหนื่อย [อิชิกาวะ โยชิกิ]_
 
-* [x] Read สิ่งที่ต้องไม่ทำของคนที่ลงมือทำ NOT-TO-DO LIST [塚本亮 (สึคาโมโตะ เรียว), ปาวัน การสมใจ (Translator)]
+* [x] Read +สิ่งที่ต้องไม่ทำของคนที่ลงมือทำ NOT-TO-DO LIST [塚本亮 (สึคาโมโตะ เรียว), ปาวัน การสมใจ (Translator)]_
 
 August 2025
 
 * [x] Start with 5–10 km runs, gradually increasing distance each week.
 
-* [x] Read ฉิบหาย: ประวัติศาสตร์มนุษยชาติฉบับวินาศสันตะโร [Tom Phillips, คุณากร วาณิชย์วิรุฬห์ (Translator)]
+* [x] Read _ฉิบหาย: ประวัติศาสตร์มนุษยชาติฉบับวินาศสันตะโร [Tom Phillips, คุณากร วาณิชย์วิรุฬห์ (Translator)]_
 
-* [x] Read ไม่ได้มีชีวิตอยู่เพื่อหล่อน จะแคร์เพื่อ? [Kamataku, カマたく, คามาทาคุ, Route21 (Translator)]
+* [x] Read _ไม่ได้มีชีวิตอยู่เพื่อหล่อน จะแคร์เพื่อ? [Kamataku, カマたく, คามาทาคุ, Route21 (Translator)]_
+
+* [x] Read _แค่ใช้คำให้ฉลาดก็เพิ่มโอกาสจาก 0 เป็น 100 [佐々木圭一, ทินภาส พาหะนิชย์ (Translator)]_
 
 September 2025
 
-* [ ] Start with 5–10 km runs, gradually increasing distance each week.
+* [x] Start with 5–10 km runs, gradually increasing distance each week.
+
+* [x] Read _ศิลปะการไม่แคร์โลกฉบับเวนส์เดย์ [Sarah Thompson, Pop Press, โรสริน ศรีคชา (Translator)]_
+
+* [x] Read _คิดมากไปทำไมขนาดพระพุทธเจ้ายังเคยทำพลาดเลย [Ryunosuke Fukai, 深井龍之介, ฟุกาอิ ริวโนะซุเกะ, ภาณุพันธ์ ปัญญาใจ (Translator)]_
+
+* [x] Read _Stoic at Work ชีวิตทำงานเฮงซวย แต่ผ่านได้ด้วยวิถีสโตอิก [Annie Lawson, อรดา ลีลานุช (Translator)]_
 
 October 2025
 
 * [ ] Start with 5–10 km runs, gradually increasing distance each week.
+
+* [ ] Read _ฉันจะไม่แก่ไปเป็นคนที่ตัวเองเกลียด [Steven Petrow, Roseann Foley Henry, วิกันดา พินทุวชิราภรณ์ (Translator)]_
 
 ## General prompts
 
