--- a/2025.md
+++ b/2025.md
@@ -46,23 +46,15 @@ July 2025
 
 * [x] I successfully completed an intensive study of Satir LV 1
 
-August 2025
+October 2025
 
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
-* [ ] I am preparing comprehensive materials for instructing students in the SF & Thinking Recursively course.
+* [ ] I am preparing comprehensive materials for instructing students in the Useless knowledge #1 course.
 
-* [ ] I will open SF & Thinking Recursively course and start teaching students.
+November 2025
 
-September 2025
-
-* [ ] I am preparing comprehensive materials for instructing students in the Functional X Part I course.
-
-* [ ] ...
-
-October 2025
-
-* [ ] I will open Functional X Part I course and start teaching students.
+* [ ] I will open Useless knowledge #1 course and start teaching students.
 
 ## Goals for next year
 
