docs(2025): mark course preparation and running tasks as complete, update reading list with new titles

--- a/2025.md
+++ b/2025.md
@@ -50,9 +50,11 @@ October 2025
 
 * [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
-* [ ] I am preparing comprehensive materials for instructing students in the Useless knowledge #1 course.
+* [x] I am preparing comprehensive materials for instructing students in the Useless knowledge #1 course.
 
 November 2025
+
+* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
 * [ ] I will open Useless knowledge #1 course and start teaching students.
 
@@ -170,9 +172,11 @@ September 2025
 
 October 2025
 
-* [ ] Start with 5–10 km runs, gradually increasing distance each week.
+* [x] Start with 5–10 km runs, gradually increasing distance each week.
 
-* [ ] Read _ฉันจะไม่แก่ไปเป็นคนที่ตัวเองเกลียด [Steven Petrow, Roseann Foley Henry, วิกันดา พินทุวชิราภรณ์ (Translator)]_
+* [x] Read _ฉันจะไม่แก่ไปเป็นคนที่ตัวเองเกลียด [Steven Petrow, Roseann Foley Henry, วิกันดา พินทุวชิราภรณ์ (Translator)]_
+
+* [x] Read _อยากได้ดีให้โกหก ฟุมิโอะ นิชิดะ, จินดาภร เสนาจักร์ (Translator)_
 
 ## General prompts
 
