--- a/2025.md
+++ b/2025.md
@@ -48,15 +48,15 @@ July 2025
 
 October 2025
 
-* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
-
 * [x] I am preparing comprehensive materials for instructing students in the Useless knowledge #1 course.
 
 November 2025
 
-* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
+* [x] I will open Useless knowledge #1 course and start teaching students.
 
-* [ ] I will open Useless knowledge #1 course and start teaching students.
+December 2025
+
+* [ ] Focus on building foundational grammar and vocabulary (A1 → A2).
 
 ## Goals for next year
 
@@ -176,7 +176,15 @@ October 2025
 
 * [x] Read _ฉันจะไม่แก่ไปเป็นคนที่ตัวเองเกลียด [Steven Petrow, Roseann Foley Henry, วิกันดา พินทุวชิราภรณ์ (Translator)]_
 
-* [x] Read _อยากได้ดีให้โกหก ฟุมิโอะ นิชิดะ, จินดาภร เสนาจักร์ (Translator)_
+* [x] Read _อยากได้ดีให้โกหก [ฟุมิโอะ นิชิดะ, จินดาภร เสนาจักร์ (Translator)]_
+
+November 2025
+
+* [x] Start with 5–10 km runs, gradually increasing distance each week.
+
+* [x] Read _อ่านใจคนเหลี่ยมจัดด้วยจิตวิทยาแห่งการสังเกต [Patrick King, ไอริสา ชั้นศิริ (Translator)]_
+
+* [x] Read _It's OK That You're Not OK ไม่เป็นไร ถ้าคุณจะไม่โอเค [Megan Devine, กัญญาพร เกษมสันต์ ณ​ อยุธยา (Translator)]_
 
 ## General prompts
 
