docs(2025): add December goals for running and reading list updates

--- a/2025.md
+++ b/2025.md
@@ -186,6 +186,12 @@ November 2025
 
 * [x] Read _It's OK That You're Not OK ไม่เป็นไร ถ้าคุณจะไม่โอเค [Megan Devine, กัญญาพร เกษมสันต์ ณ​ อยุธยา (Translator)]_
 
+December 2025
+
+* [x] Start with 5–10 km runs, gradually increasing distance each week.
+
+* [x] _The Brain Audit จิตวิทยาการขายที่สมองปฏิเสธไม่ลง [Sean D'Souza, นิติ ชนภัณฑารักษ์ (Translator)]_
+
 ## General prompts
 
 * We are not hiring.
