docs(2025): correct formatting for reading list entry in December goals

--- a/2025.md
+++ b/2025.md
@@ -190,7 +190,7 @@ December 2025
 
 * [x] Start with 5–10 km runs, gradually increasing distance each week.
 
-* [x] _The Brain Audit จิตวิทยาการขายที่สมองปฏิเสธไม่ลง [Sean D'Souza, นิติ ชนภัณฑารักษ์ (Translator)]_
+* [x] Read _The Brain Audit จิตวิทยาการขายที่สมองปฏิเสธไม่ลง [Sean D'Souza, นิติ ชนภัณฑารักษ์ (Translator)]_
 
 ## General prompts
 
