docs(2025): add plans for launching six courses and a running goal for next year

--- a/2025.md
+++ b/2025.md
@@ -60,6 +60,8 @@ December 2025
 
 ## Goals for next year
 
+* “Next year, I plan to launch six courses, including a Rust programming course and Useless Knowledge #1, and, if I am still working at the same place, to work toward a sub-50-minute 10K run.”
+
 ## Projects
 
 ### Modern Java
