docs: update 2025 brag document content.

--- a/2025.md
+++ b/2025.md
@@ -68,6 +68,14 @@ December 2025
 
 * Recently, I've dedicated time to refining my skills in refactoring Java code, focusing on enhancing its structure and efficiency.
 
+### Banking Operations Platform
+
+* Led the development of a banking operations platform supporting branch-level services—an area with high operational criticality but low ownership. The project operated under high uncertainty with continuously evolving requirements and a fixed deadline.
+* **Key Contributions**: Implemented Branch Open/Close lifecycle services and End-of-Day (EOD) reporting. Developed custom API access control using a Kong Gateway custom plugin.
+* **Execution & Decision-Making**: Applied a “deliver early to build trust” strategy. Adopted a discovery-driven approach for EOD reporting to bridge business expectations and legacy capabilities.
+* **Impact**: Enabled critical branch operations with a centralized platform. Increased stakeholder confidence through consistent delivery and reduced project risk.
+* **Strengths Demonstrated**: Effective execution in high-uncertainty environments, strong ownership of ambiguous problem spaces, and ability to align business expectations with legacy system realities.
+
 ## Collaboration & mentorship
 
 * Mentoring interns / helping new team members get started
